--- a/game.html
+++ b/game.html
@@ -40,16 +40,7 @@
         <div class="table">
             <div class="table_td">
                 <div class="gameMenu_box">
-                    <div class="gameMenu_box_title">
-                        Game Paused
-                    </div>
-                    <div class="gameMenu_box_content">
-                        <div class="gameMenu_box_points">
-                        <div class="clear"></div>
-                        <div class="pause_continueButton btn">
-                            Continue
-                        </div>
-                    </div>
+                    <div class="btn2">Thanks for the patience snek</div>
                 </div>
             </div>
         </div>
