--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <title>Basilisk</title>
 </head>
 <body class="gradient">
-<div>
+
+<div class="header">
     <img src="BasiliskLogoFull.svg" alt="basilisk" />
 </div>
+<h1>The Snek is comming...</h1>
 <div class="wrapper">
     <iframe src="game.html" id="gameIframe" width="600" height="700"></iframe>
 </div>
