--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="header">
     <img src="BasiliskLogoFull.svg" alt="basilisk" />
 </div>
-<h1>The Snek is comming...</h1>
+<h1>The Snek is coming...</h1>
 <div class="wrapper">
     <iframe src="game.html" id="gameIframe" width="600" height="700"></iframe>
 </div>
